--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
+cffi==1.17.1
+charset-normalizer==3.4.1
+cryptography==44.0.2
 iniconfig==2.1.0
 numpy==2.2.4
 packaging==24.2
+pdfminer.six==20250327
+pdfplumber==0.11.6
+pillow==11.1.0
 pluggy==1.5.0
+pycparser==2.22
+pypdfium2==4.30.1
 pytest==8.3.5
